{
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "GamePlay",
            "id": "b55d0027-fac0-4f06-8daa-7cec17aaf110",
            "actions": [
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "b99465c1-fb18-4595-a1e8-9b99b8afff4b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "f219c6ff-29d7-47ab-b2a4-7d36aeebfc53",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b0bc8391-7f19-4686-9af3-f757cc07cfe0",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fca5b6de-c08a-4b62-b74a-d513833f0704",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "af41135d-1ee4-4b92-9b34-fadf7b8fe82a",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b6edfd06-97b7-42a5-b247-9e2fa2e8d80e",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}